--- a/styles/monstyle.css
+++ b/styles/monstyle.css
@@ -8,7 +8,14 @@
   
 }
 
+html{
+    scroll-behavior:smooth;
+    scroll-padding-top: 50%;
+}
 
+a{
+  color: Black;
+}
 
 /* Le menu déroulant*/
 
@@ -114,6 +121,31 @@
      
     }    
 
+/* la section works*/
+
+#centerpoint {
+    top: 50%;
+    left: 50%;
+    position: absolute;
+}
+
+
+dialog { 
+    display: block; 
+    margin: 2%;
+    border: 10px ridge MediumSeaGreen ;
+    background-color: WhiteSmoke;
+    box-shadow: 2px 2px 12px #555;
+    position: relative;
+    width: 75%;
+    margin-left: -50%;
+   // height: 50%;
+   margin-top: -25%;
+}
+
+dialog:not(:target):not([open]) { display: none; }
+
+
 /*Le CV*/
 
 .bandeau {
@@ -165,6 +197,18 @@ font-family: 'VG5000';
     box-shadow: 2px 2px 12px #555;
 
 }
+
+#rectcomp2 {             /*cadre Langues et informatique*/
+    text-align: left;
+    float: left;
+    border: 10px ridge darkgreen;
+    background-color: WhiteSmoke;
+    margin: 2% 0% 2% 2%;
+    padding: 8px;
+    box-shadow: 2px 2px 12px #555;
+
+}
+
 #rectexp {
     text-align: center;
     float: right;
@@ -225,6 +269,17 @@ font-family: 'VG5000';
     text-decoration: none;
 
 }
+
+.titre2 {
+    text-align: left;
+    font-weight: bold;
+    font-size: xx-large;
+    color: black;
+    text-decoration: none;
+    margin-top:1%;
+
+}
+
 .news {
     text-align: center;
 font-family: 'Kaeru';
@@ -279,6 +334,18 @@ form {
     box-shadow: 2px 2px 12px #555;
     z-index: 1;
 }
+
+#intvid {
+    float: left;
+    border: 15px ridge darkgrey;
+    background-color: WhiteSmoke;
+   // margin: 5% 25% 1% 25%;
+   margin-bottom: 3%;
+    padding: 0px; 
+    box-shadow: 2px 2px 12px #555;
+    z-index: 1;
+}
+
 #vid2 {
     float: right;
     border: 15px ridge #EAE571;
